# project-insight-crawler

./: .env.development  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  database.py  main.py  models.py  pyproject.toml  runner.py
.github/: dependabot.yml
.github/workflows/: ci.yml
crawler/: crawler.py  database.py  models.py
crawler/database/: database.py
crawler/logger/: logger.py
crawler/models/: class_info.py  method_info.py
crawler/parser/: java_parser.py
crawler/use_cases/: save_data.py
scripts/: build_grammar.py
tests/: conftest.py  test_class_info.py  test_java_parser.py  test_method_info.py  test_save_data.py
