[tool.poetry]
name = "project-insight-crawler"
version = "0.1.0"
description = "Crawler module for Project Insight"
authors = ["Gustavo A. Gutkoski <gustavogutkoski2609@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "crawler" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.1"

[tool.poetry.urls]
repository = "https://github.com/gustavogutkoski/project-insight-crawler"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
mypy = "^1.17.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "E", "F", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["unused-ignore"]

[tool.coverage.run]
branch = true
source = ["crawler"]

[tool.coverage.report]
show_missing = true
skip_covered = true