[tool.poetry]
name = "project-insight-crawler"
version = "0.1.0"
description = "Crawler module for Project Insight"
authors = ["Gustavo A. Gutkoski <gustavogutkoski2609@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "crawler" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.1"
tree-sitter = "^0.20.4"

[tool.poetry.urls]
repository = "https://github.com/gustavogutkoski/project-insight-crawler"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
build-grammar = "scripts.build_grammar:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "E", "F", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["unused-ignore"]

[tool.coverage.run]
branch = true
source = ["crawler"]

[tool.coverage.report]
show_missing = true
skip_covered = true